# gitlaw

./: Cargo.toml  README.md  Readme.md  gitlaw.toml  r&d.md
src/: app.rs  lib.rs  main.rs
src/commands/: README.md  mod.rs
src/commands/commit/: mod.rs
src/commands/config/: mod.rs
src/commands/motion/: mod.rs
src/commands/setup/: mod.rs
src/commands/summon/: engine.rs  mod.rs  model.rs  summon.rs  summon_flags.rs  summon_helper.rs  types.rs
src/helpers/: README.md  commands.rs  macros.rs  mod.rs
src/models/: gitlaw_toml.rs  mod.rs
src/models/toml/: create.rs  mod.rs  read.rs  read_helper.rs  read_tables.rs  types.rs
src/modules/: README.md  mod.rs
src/modules/download/: download.rs  download_helper.rs  file.rs  mod.rs  read.rs  types.rs
src/modules/engine/: download.rs
src/modules/model/: download.rs
src/modules/toml/: create.rs  mod.rs  read.rs  read_helper.rs  read_tables.rs  types.rs
