[package]
name = "gitlaw"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.38", features = ["derive"] }
reqwest = { version = "0.12.15", features = [
    "blocking",
    "rustls-tls",
], default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.22"
